# FileSender

./: Cargo.toml  README.md  Window.glade
Web/: index.html
Web/static/: style.css
src/: gui.rs  main.rs
