[package]
name = "filesender"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]

[profile.release]
lto = true

[features]
default = []
bundled = []

[dependencies]
clap = "2"
iron = "0.4"
mount = "0.2"
params = "0.5"
url = "1.1"
glib = "*"
gdk = "*"

[dependencies.multipart]
version = "0.8"
default-features = false
features = ["server", "iron"]

[dependencies.gtk]
version = "*"
features = ["v3_10"]
