[package]
name = "filesender"
version = "0.2.0"
authors = ["Flakebi <flakebi@t-online.de>"]

[profile.release]
lto = true

[features]
default = []
bundled = []

[dependencies]
clap = "*"
error-chain = "*"
mime_multipart = "*"
glib = "*"
gdk = "*"
lazy_static = "*"
rocket = "*"
rocket_codegen = "*"
tempfile = "*"

[dependencies.gtk]
version = "*"
features = ["v3_10"]
